<resources>
    <string name="app_name">Aqua</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consumer_login_fragment">Login to your account</string>
    <string name="consumer_login_edit_text_password">Password</string>
    <string name="consumer_login_text_view_password">Password</string>
    <string name="consumer_login_text_view_email">Email</string>
    <string name="consumer_login_edit_text_email">Email</string>
    <string name="consumer_login_text_view_forget_password">Forgot Password?</string>
    <string name="consumer_login_button_login">Login</string>
    <string name="consumer_login_text_view_signup">SignUp</string>
    <string name="consumer_sign_up_text_view_back">Back</string>
    <string name="consumer_sign_up_fragment">Sign up to your account</string>
    <string name="consumer_signup_text_view_first_name">First Name</string>
    <string name="consumer_signup_edit_text_first_name">First Name</string>
    <string name="consumer_signup_text_view_last_name">Last Name</string>
    <string name="consumer_signup_edit_text_last_name">Last Name</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="consumer_signup_text_view_email">Email</string>
    <string name="consumer_signup_edit_text_email">Email</string>
    <string name="consumer_signup_text_view_password">Password</string>
    <string name="consumer_signup_edit_text_password">Password</string>
    <string name="consumer_signup_text_view_phoneNumber">Phone Number</string>
    <string name="consumer_signup_edit_text_phoneNumber">Phone number</string>
    <string name="consumer_signup_text_view_address">Address</string>
    <string name="consumer_signup_edit_text_address">Location</string>
    <string name="consumer_signup_text_company_name">Company Name</string>
    <string name="consumer_signup_text_location">Location</string>
    <string name="consumer_signup_text_view_number_of_bottles">Number Of Bottle</string>
    <string name="consumer_signup_edit_text_number_of_bottles">1</string>
    <string name="consumer_signup_button_login">SignUp</string>
    <string name="consumer_signup_text_view_already_have_an_account">Already have an account?</string>
    <string name="consumer_signup_text_view_sign_in">Sign in</string>
    <string name="firstOBTitle">Find the best deals and special offers!</string>
    <string name="firstOBText">Signing up and receiving your order is straightforward and effortless. There is no need to contact the seller or sign a contract.</string>
    <string name="secondOBTitle">Transparent pricing</string>
    <string name="secondOBText">Before placing an order, customers will input their address for delivery and receive detailed pricing information. There are no hidden costs!</string>
    <string name="thirdOBTitle">Timely delivery</string>
    <string name="thirdOBText">Depending on the customer\'s needs, delivery can be one time or long running.</string>
    <string name="home_tab">Home</string>
    <string name="transaction_tab">Transaction</string>
    <string name="account_tab">Account</string>
    <string name="supplier_homepage">Supplier Homepage</string>
    <string name="back">Back</string>
    <string name="statistics_level">Statistics Level</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="invite_friends">Invite friends</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="email">abimbolathomas@gmail.com</string>
    <string name="profile_name">Abimbola Thomas</string>
    <string name="profile_image">profile Image</string>
    <string name="title">My Profile</string>
    <string name="favourite_customers">My Profile</string>
    <string name="supply_made"> Profile</string>
    <string name="_24"> 24</string>
    <string name="in_the_past"> Profile</string>
    <string name="greeting">Hi, Godswill</string>
    <string name="search_hint">Search for supplier</string>
    <string name="consumtion_text">Your consumption level is 65.89%</string>
    <string name="date">Today 02 Apr 2022</string>
    <string name="recyclerview_title">Suppliers</string>
    <string name="company_name">Arizona Water Inc</string>
    <string name="item">Bottle Water Pack</string>
    <string name="location">Ikeja, Lagos</string>
    <string name="price">N900.00 per/bottle</string>
    <string name="store">View store</string>
    <string name="day_usageText">TOTAL USAGE TODAY</string>
    <string name="day_UsagePercent">65.89%</string>
    <string name="month_usageText">TOTAL USAGE THIS MONTH</string>
    <string name="month_usagePercent">35.51%</string>
    <string name="week_usageText">TOTAL USAGE THIS WEEK</string>
    <string name="week_usagePercent">55.18%</string>
    <string name="year_usageText">TOTAL USAGE THIS YEAR</string>
    <string name="year_usagePercent">29.76%</string>
    <string name="hi_supplier">Hi, Supplier</string>
    <string name="supplier">Supplier</string>
    <string name="consumer">Consumer</string>
    <string name="water_with_excellence">water with excellence</string>
    <string name="explore_quality">Explore quality</string>
    <string name="the_water_quality_is_in_excellent_condition">The water quality is in excellent condition</string>
    <string name="in_stock">in stock</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="per_bottle">per/bottle</string>
    <string name="n900_00">N900.00</string>
    <string name="company_name_detail">Arinzonal Water</string>
    <string name="arizonal_water_inc">Arizonal Water Inc</string>
    <string name="address">Ikeja, Lagos</string>
    <string name="customer_rating">65% customer\'s rate</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="products">Products</string>
    <string name="sort_by_btn">Sort By</string>
    <string name="filter_btn">Filter</string>
    <string name="added">Successfully added to Cart</string>
    <string name="_9">(9)</string>
    <string name="enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_instruction_to_reset_your_password">Enter the email associated with your account and we \'ll send an email with instruction to reset your password</string>
    <string name="enter_the_email_associated_with_your_account_and_nwe_ll_send_an_email_with_instruction_to_reset_your_npassword">Enter the email associated with your account and \nwe \'ll send an email with instruction to reset your \npassword</string>
    <string name="check_mail">Check Mail</string>
    <string name="we_have_sent_a_password_recover_instruction_to_your_account">We have sent a password recover instruction to your account</string>
    <string name="open_mail_app">Open mail app</string>
    <string name="did_not_receive_the_email_check_your_spam_filter_or">Did not receive the email check your spam filter or</string>
    <string name="try_another_email">try another email</string>
    <string name="supplier_login_text_view_signup">Sign up</string>
    <string name="done">Done</string>
    <string name="are_you_sure_you_want_to_logout_from_your_naccount">Are you sure you want to logout from your\nAccount?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="overview">Overview</string>
    <string name="_98">98</string>
    <string name="total_nsupplies_made">Total \nSupplies Made</string>
    <string name="_111">111</string>
    <string name="total_norders_received">Total \norders received</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="_email">Email</string>
    <string name="__email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="_don_t_have_an_account">Don\'t have an account?</string>
    <string name="_sign_up">Sign Up</string>
    <string name="forogot_password">Forogot Password?</string>
    <string name="password">Password</string>
    <string name="___email">Email</string>
    <string name="emailtv">Email</string>
    <string name="login_to_your_account_tv">Login to your account</string>
    <string name="tabLayout">Tablayout</string>
    <string name="person">Person</string>
    <string name="order">Order</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="_23_3_2022">23/3/2022</string>
    <string name="delivered">Delivered</string>
    <string name="arizona_inc">Arizona Inc.</string>
    <string name="_6_packs_of_big_bottle_water">6 packs of big bottle water</string>
    <string name="reminder">Reminder sent successfully</string>
    <string name="reminder_message">You’ve successfully sent a reminder to Pearl Somto he will get a notification to place order</string>
    <string name="back_home">Back Home</string>
    <string name="favourite_customer">Favourite Customers</string>
    <string name="Filter">Filter</string>
    <string name="Pearl">Pearl Somto</string>
    <string name="Egbeda">Egbeda, Lagos</string>
    <string name="Info">More Info</string>
    <string name="location_name">34, Arinza street, Magodo, Phase2, Lagos</string>
    <string name="phone_number">07045763344</string>
    <string name="Emeka_email">Emekachukwuebuka@gmail.com</string>
    <string name="view_consumption">Consumption level (65.89%)</string>
    <string name="bottle_bought">Total Bottle bought(76)</string>
    <string name="bottle_remaining">Total Bottle remaining(76)</string>
    <string name="modal_button">Send a Reminder</string>
    <string name="product_details">Product Details</string>
    <string name="pearl_somto">Pearl Somto</string>
    <string name="egbeda_lagos">Egbeda, Lagos</string>
    <string name="filter">Filter</string>
    <string name="time">Time</string>
    <string name="items">Items</string>
    <string name="order_details">Order details</string>
    <string name="bottle_water_pack">Bottle water pack</string>
    <string name="requester">Requester:</string>
    <string name="abimbola_thomas">Abimbola Thomas</string>
    <string name="quantity">Quantity:</string>
    <string name="_10_packs_of_bottle_water">10 packs of bottle water</string>
    <string name="number">Phone number:</string>
    <string name="addressno">Address:</string>
    <string name="activity_overview">Activity</string>
    <string name="showing_all_supplies_failed_and_delivered">showing_all_supplies_failed_and_delivered</string>
    <string name="ain_the_past">in the past</string>
    <string name="_112">112</string>
    <string name="bottles_delivered_successful">bottles_delivered_successful</string>
    <string name="defaulted_bottles">defaulted_bottles</string>
    <string name="_7">7</string>
    <string name="failed_delivery">failed delivery</string>
    <string name="_09088764533">09088764533</string>
    <string name="_44_alidada_street_okota_lagos">44, Alidada Street, Okota, Lagos</string>
    <string name="description">Description</string>
    <string name="lorem_ispsum_ruh_un_tehs_jsh_rem_kahk_isurem">Lorem ispsum ruh\'un tehs jsh rem kahk isurem.</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="sign_up_to_your_account">Sign up to your account</string>
    <string name="reset_password">Reset Password</string>
    <string name="abayomitunde_gmail_com">abayomitunde@gmail.com</string>
    <string name="past_supplies">Past Supplies</string>
    <string name="confirm_email_msg">Click on the link below to confirm your email address and start enjoying Aqua app</string>
    <string name="fragment_change_password">Change Password</string>
    <string name="fragment_current_password">Current Password</string>
    <string name="fragment_new_password">New Password</string>
</resources>