<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/activity_overview_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/back"
        android:textColor="@color/all_text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableLeftCompat="@drawable/ic_back_arrow" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/activity_overview"
        android:textColor="@color/all_text_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_overview_back_btn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/showing_all_supplies_failed_and_delivered"
        android:textColor="@color/all_text_color"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="#05000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/manrope"
        android:text="@string/supply_made"
        android:textColor="@color/all_text_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/activity_overview_past_delivery_dropdown_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/in_the_past"
        android:textColor="@color/all_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/chart1"
        app:layout_constraintEnd_toEndOf="parent"
        app:drawableRightCompat="@drawable/ic_baseline_drop_down" />


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <TextView
        android:id="@+id/activity_overview_succesful_delivered_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="288dp"
        android:background="#0A21334F"
        android:fontFamily="@font/manrope"
        android:paddingHorizontal="10dp"
        android:paddingVertical="6dp"
        android:text="@string/_112"
        android:textColor="@color/all_text_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/bottles_delivered_successful"
        android:textColor="@color/all_text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintStart_toEndOf="@+id/activity_overview_succesful_delivered_tv" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="#0A21334F"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_overview_succesful_delivered_tv" />

    <TextView
        android:id="@+id/activity_overview_default_bottles_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="#0A21334F"
        android:fontFamily="@font/manrope"
        android:paddingHorizontal="10dp"
        android:paddingVertical="6dp"
        android:text="@string/_24"
        android:textColor="@color/all_text_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/defaulted_bottles"
        android:textColor="@color/all_text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintStart_toEndOf="@+id/activity_overview_default_bottles_tv" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#0A21334F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_overview_default_bottles_tv" />

    <TextView
        android:id="@+id/activity_overview_failed_delivered_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="36dp"
        android:background="#0A21334F"
        android:fontFamily="@font/manrope"
        android:paddingHorizontal="10dp"
        android:paddingVertical="6dp"
        android:text="@string/_7"
        android:textColor="@color/all_text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:layout_constraintVertical_bias="0.764" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/failed_delivery"
        android:textColor="@color/all_text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_overview_failed_delivered_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>